--- a/src/App.css
+++ b/src/App.css
@@ -1,8 +1,11 @@
-.page{
+header{
   display: flex;
   justify-content: center;
   align-items: center;
   flex-direction: column;
+}
+header h1{
+  margin-bottom: 2rem;
 }
 
 form{
@@ -11,7 +14,31 @@ form{
   justify-content: center;
 }
 
-main {  
+ul { 
   display: grid;
-  grid-template-columns: repeat(auto-fill, 1fr);
+  grid-template-columns: repeat(auto-fill, minmax(200px, 1fr));
+  gap: 1rem;
+}
+
+.movie{
+  list-style: none;
+  background-color:#808080;
+  margin-bottom: 1.5rem;
+  height: auto;
+}
+
+.movie-info{
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  height: 80px;
+
+  background-color: rgba(0, 0, 0, 0.312);
+  padding-left: .5rem;
+  padding-right: .5rem;
+}
+
+.movie img{
+  width: 100%;
+  height: 350px;
 }
