--- a/src/App.css
+++ b/src/App.css
@@ -22,7 +22,7 @@ ul {
 
 .movie{
   list-style: none;
-  background-color:#808080;
+  background-color:#202b38;
   margin-bottom: 1.5rem;
   height: auto;
 }
