--- a/src/App.css
+++ b/src/App.css
@@ -14,7 +14,7 @@ form{
   justify-content: center;
 }
 
-ul { 
+.movie-container { 
   display: grid;
   grid-template-columns: repeat(auto-fill, minmax(200px, 1fr));
   gap: 1rem;
